--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "svelte-transitions": "^1.2.0"
   },
   "scripts": {
     "build": "rollup -c",
